fix overflow Firefox

--- a/src/scss/popup.scss
+++ b/src/scss/popup.scss
@@ -6,6 +6,7 @@ html {
 }
 
 body {
+  overflow: hidden;
   width: 300px;
   &,
   #popup {
@@ -14,6 +15,7 @@ body {
   }
 
   #popup {
+    overflow: hidden;
     height: 480px;
     display: flex;
     flex-direction: column;
